# mrf-tool

./: .gitignore  CLAUDE.md  README.md  STATUS.md  UHC-TO-PROD.md  mrf-rad-spec.md  pyproject.toml
scripts/: build_nppes_parquet.py  fetch_healthsparq_toc.py  start-web.sh
src/mrf_rad/: __init__.py  batch.py  cli.py  probe.py
src/mrf_rad/codes/: __init__.py  aba.py  profiles.py  radiology.py
src/mrf_rad/discovery/: __init__.py  base.py  bcbsmn.py
src/mrf_rad/output/: __init__.py  parquet.py
src/mrf_rad/parser/: __init__.py  normalize.py  stream.py
src/mrf_rad/query/: __init__.py  duckdb.py
src/mrf_rad/web/: __init__.py  app.py  app_full.py  presets.py
tests/: test_batch.py  test_codes.py  test_discovery.py  test_parser.py  test_query.py  test_web.py
