[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mrf-rad"
version = "0.1.0"
description = "Service-line rate extraction from Transparency in Coverage MRFs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
    "duckdb>=1.1",
    "fastapi>=0.115",
    "httpx>=0.27",
    "ijson>=3.3",
    "pyarrow>=16.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "starlette>=0.46",
]

[project.scripts]
mrf-rad = "mrf_rad.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
